Update existing `<img>` tags

--- a/src/components/homepage/section_team.astro
+++ b/src/components/homepage/section_team.astro
@@ -5,30 +5,30 @@ import LoggerCard from "@components/ui/logger_card.astro";
 import SectionTitle from "@components/ui/section_title.astro";
 import type { BackgroundColor } from "@libs/types";
 
-import AlexandreBHoverReference from '@static/loggers/Alexandre_B_hover.avif';
-import AlexandreBReference from '@static/loggers/Alexandre_B.avif';
-import AlexandreMHoverReference from '@static/loggers/Alexandre_M_hover.avif';
-import AlexandreMReference from '@static/loggers/Alexandre_M.avif';
-import BouchraHoverReference from '@static/loggers/Bouchra_hover.avif';
-import BouchraReference from '@static/loggers/Bouchra.avif';
-import GuillaumeFHoverReference from '@static/loggers/Guillaume_F_hover.avif';
-import GuillaumeFReference from '@static/loggers/Guillaume_F.avif';
-import GuillaumeTHoverReference from '@static/loggers/Guillaume_T_hover.avif';
-import GuillaumeTReference from '@static/loggers/Guillaume_T.avif';
-import JoffreyHoverReference from '@static/loggers/Joffrey_R_hover.avif';
-import JoffreyReference from '@static/loggers/Joffrey_R.avif';
-import LaurentHoverReference from '@static/loggers/Laurent_Z_hover.avif';
-import LaurentReference from '@static/loggers/Laurent_Z.avif';
-import OlivierHoverReference from '@static/loggers/Olivier_R_hover.avif';
-import OlivierReference from '@static/loggers/Olivier_R.avif';
-import RayanHoverReference from '@static/loggers/Rayan_hover.avif';
-import RayanReference from '@static/loggers/Rayan.avif';
-import ThibautHoverReference from '@static/loggers/Thibaut_W_hover.avif';
-import ThibautReference from '@static/loggers/Thibaut_W.avif';
-import ValentinHoverReference from '@static/loggers/Valentin_hover.avif';
-import ValentinReference from '@static/loggers/Valentin.avif';
-import VincentHoverReference from '@static/loggers/Vincent_P_hover.avif';
-import VincentReference from '@static/loggers/Vincent_P.avif';
+import AlexandreBHoverReference from '@assets/loggers/Alexandre_B_hover.webp';
+import AlexandreBReference from '@assets/loggers/Alexandre_B.webp';
+import AlexandreMHoverReference from '@assets/loggers/Alexandre_M_hover.webp';
+import AlexandreMReference from '@assets/loggers/Alexandre_M.webp';
+import BouchraHoverReference from '@assets/loggers/Bouchra_hover.webp';
+import BouchraReference from '@assets/loggers/Bouchra.webp';
+import GuillaumeFHoverReference from '@assets/loggers/Guillaume_F_hover.webp';
+import GuillaumeFReference from '@assets/loggers/Guillaume_F.webp';
+import GuillaumeTHoverReference from '@assets/loggers/Guillaume_T_hover.webp';
+import GuillaumeTReference from '@assets/loggers/Guillaume_T.webp';
+import JoffreyHoverReference from '@assets/loggers/Joffrey_R_hover.webp';
+import JoffreyReference from '@assets/loggers/Joffrey_R.webp';
+import LaurentHoverReference from '@assets/loggers/Laurent_Z_hover.webp';
+import LaurentReference from '@assets/loggers/Laurent_Z.webp';
+import OlivierHoverReference from '@assets/loggers/Olivier_R_hover.webp';
+import OlivierReference from '@assets/loggers/Olivier_R.webp';
+import RayanHoverReference from '@assets/loggers/Rayan_hover.webp';
+import RayanReference from '@assets/loggers/Rayan.webp';
+import ThibautHoverReference from '@assets/loggers/Thibaut_W_hover.webp';
+import ThibautReference from '@assets/loggers/Thibaut_W.webp';
+import ValentinHoverReference from '@assets/loggers/Valentin_hover.webp';
+import ValentinReference from '@assets/loggers/Valentin.webp';
+import VincentHoverReference from '@assets/loggers/Vincent_P_hover.webp';
+import VincentReference from '@assets/loggers/Vincent_P.webp';
 
 
 interface Props {
