--- a/src/components/ui/article_card.astro
+++ b/src/components/ui/article_card.astro
@@ -1,7 +1,10 @@
 ---
+import { Image } from 'astro:assets';
+
+import type { ImageMetadata } from 'astro';
 import type { BackgroundColor, BorderColor, TextColor } from '@libs/types';
 interface Props {
-    image: string;
+    image: ImageMetadata;
     title: string;
     description: string;
     class?: string;
@@ -15,7 +18,7 @@ const { image, title, description, class: className = "lg:flex", bgColor,  borde
 
 <a href={href}>
     <div class={className + ` overflow-hidden flex-col items-center text-center max-w-sm border-2 ${borderColor} rounded-t-[20px] font-mono h-full`}>
-        <img src={image} alt="" />
+        <Image src={image} alt="" />
         <p class={`${bgColor} border-y-2 border-y-black text-white text-2xl px-1 py-2 w-full`}>{title}</p>
         <p class="text-xl px-4 pt-6 line-clamp-3">{description}</p>
         <p class={`font-bold text-xl ${textColor} px-4 pt-3 pb-6`}>En savoir plus</p>
