--- a/src/components/ui/info_card.astro
+++ b/src/components/ui/info_card.astro
@@ -1,24 +1,22 @@
 ---
-import type { BackgroundColor, TextColor } from "@libs/types";
+import { Image } from "astro:assets";
+
+import type { ImageMetadata } from "astro";
+import type { BackgroundColor } from "@libs/types";
 
 interface Props {
     title: string;
     bgColor: BackgroundColor;
-    textColor: TextColor;
-    image: {
-        src: string;
-        width: number;
-        height: number;
-    };
+    image: ImageMetadata
 }
-const { title, image, bgColor, textColor } = Astro.props as Props;
+const { title, image, bgColor } = Astro.props as Props;
 ---
 
 <section class="relative w-full mt-20">
     <div class="flex flex-col lg:flex-row">
         <div class="relative flex basis-1/2">
-            <img class={`lg:absolute lg:right-0 lg:bottom-0 border w-screen-1/2 lg:w-auto lg:h-[95%] ${bgColor} rounded-2xl translate-x-[calc(25vw+2rem)] lg:-translate-x-8 -translate-y-8`} width={image.width} height={image.height} alt="" />
-            <img class="lg:absolute lg:right-0 lg:bottom-0 w-screen-1/2 lg:w-auto h-[95%] object-cover rounded-2xl -translate-x-screen-1/4 lg:-translate-x-16 z-10" src={image.src} alt="" />
+            <img class:list={["g:absolute lg:right-0 lg:bottom-0 border w-screen-1/2 lg:w-auto lg:h-[95%] rounded-2xl translate-x-[calc(25vw+2rem)] lg:-translate-x-8 -translate-y-8", bgColor]} width={image.width} height={image.height} alt="" />
+            <Image class="lg:absolute lg:right-0 lg:bottom-0 w-screen-1/2 lg:w-auto h-[95%] object-cover rounded-2xl -translate-x-screen-1/4 lg:-translate-x-16 z-10" src={image} alt="" />
         </div>
         <div class="flex flex-col border-3 rounded-2xl items-center p-8 lg:p-20  lg:h-[95%] basis-3/2 bg-black text-white">
             <div class="flex flex-col gap-12 max-w-lg">
