--- a/src/components/homepage/section_expertise.astro
+++ b/src/components/homepage/section_expertise.astro
@@ -1,12 +1,13 @@
 ---
 import Icon from '@components/ui/icon.astro';
 
-import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.avif';
+import { Image } from 'astro:assets';
+import HommeCourseOrdinateurReference from '@assets/homme-course-ordinateur.webp';
 ---
 
 <section class="relative w-full z-0">
     <div class="absolute h-[400px] lg:h-[530px] top-[280px] lg:top-auto lg:bottom-0 left-[calc(50vw-170px)] lg:left-[calc(25vw-205px)] z-10">
-        <img class="h-full w-auto" src={HommeCourseOrdinateurReference} width="515" height="606" alt="" />
+        <Image class="h-full w-auto" src={HommeCourseOrdinateurReference} alt="" />
     </div>
     <div class="flex flex-col lg:flex-row">
         <div class="flex lg:w-[33vw] justify-center lg:justify-end bg-black text-white">
