--- a/src/components/homepage/section_recruitment.astro
+++ b/src/components/homepage/section_recruitment.astro
@@ -1,7 +1,8 @@
 ---
 import Icon from '@components/ui/icon.astro';
 
-import HommeClavierReference from '@static/Guillaume_homepage.avif';
+import { Image } from 'astro:assets';
+import HommeClavierReference from '@assets/Guillaume_homepage.webp';
 
 import { getCollection } from 'astro:content';
 const jobEntries = await getCollection('job');
@@ -9,7 +10,7 @@ const jobEntries = await getCollection('job');
 
 <section class="relative w-full">
     <div class="absolute h-[36rem] bottom-[460px] lg:bottom-0 left-[calc(50vw-160px)] z-0">
-        <img class="h-full w-auto" src={HommeClavierReference} width="396" height="672" alt="" />
+        <Image class="h-full w-auto" src={HommeClavierReference} alt="" />
     </div>
     <div class="flex flex-col lg:flex-row">
         <div class="flex w-full lg:max-w-[50vw] justify-center lg:justify-end items-center bg-black text-white">
