--- a/src/components/homepage/section_wearelog.astro
+++ b/src/components/homepage/section_wearelog.astro
@@ -1,12 +1,13 @@
 ---
 import Icon from '@components/ui/icon.astro';
 
-import PhotoSommaireReference from '@static/photo-sommaire.avif';
+import { Image } from 'astro:assets';
+import PhotoSommaireReference from '@assets/photo-sommaire.webp';
 ---
 
 <section class="relative w-full mt-20">
     <div class="flex flex-col lg:flex-row items-center">
-        <img class="w-full lg:w-[50vw]" src={PhotoSommaireReference} width="964" height="536" alt="" />
+        <Image class="w-full lg:w-[50vw]" src={PhotoSommaireReference} alt="" />
         <div class="flex flex-col pl-4 lg:px-12 lg:w-[50vw] lg:h-[25vw] py-12 lg:py-0 bg-black text-white justify-center">
             <div class="flex flex-row">
                 <h1 class="inline-flex gap-1 font-bold text-5xl mr-2">
