--- a/src/components/ui/banner.astro
+++ b/src/components/ui/banner.astro
@@ -1,4 +1,7 @@
 ---
+import { Image } from "astro:assets";
+
+import type { ImageMetadata } from "astro";
 import type { BackgroundColor, TextColor } from "@libs/types";
 interface Props {
     title: string;
@@ -6,11 +9,7 @@ interface Props {
     description: string;
     bgColor: BackgroundColor;
     textColor: TextColor;
-    image: {
-        src: string;
-        width: number;
-        height: number;
-    };
+    image: ImageMetadata;
 }
 const { title, subtitle, description, bgColor, textColor, image } = Astro.props as Props;
 ---
@@ -18,12 +17,12 @@ const { title, subtitle, description, bgColor, textColor, image } = Astro.props 
 <section class="relative w-full mt-20">
     <div class="flex flex-col lg:flex-row">
         <div class="relative flex basis-1/2 bg-gray-log">
-            <img class={`lg:absolute lg:right-0 lg:bottom-0 border w-screen-1/2 lg:w-auto lg:h-[95%] ${bgColor} rounded-2xl translate-x-[calc(25vw+2rem)] lg:-translate-x-8 -translate-y-8`} width={image.width} height={image.height} alt="" />
-            <img class="lg:absolute lg:right-0 lg:bottom-0 w-screen-1/2 lg:w-auto h-[95%] rounded-2xl -translate-x-screen-1/4 lg:-translate-x-16 z-10" src={image.src} width={image.width} height={image.height} alt="" />
+            <img class:list={["lg:absolute lg:right-0 lg:bottom-0 border w-screen-1/2 lg:w-auto lg:h-[95%] rounded-2xl translate-x-[calc(25vw+2rem)] lg:-translate-x-8 -translate-y-8", bgColor]} width={image.width} height={image.height} alt="" />
+            <Image class="lg:absolute lg:right-0 lg:bottom-0 w-screen-1/2 lg:w-auto h-[95%] rounded-2xl -translate-x-screen-1/4 lg:-translate-x-16 z-10" src={image} alt="" />
         </div>
         <div class="flex bg-black basis-1/2 text-white flex-col justify-center p-10">
             <div class="flex flex-col gap-4 max-w-xl">
-                <h1 class={`font-bold ${textColor} text-2xl md:text-3xl uppercase`}>{title}</h1>
+                <h1 class:list={["font-bold text-2xl md:text-3xl uppercase", textColor]}>{title}</h1>
                 <h2 class="font-bold text-xl md:text-2xl">{subtitle}</h2>
                 <p class="text-lg md:text-xl">{description}</p>
             </div>
