--- a/src/components/ui/call_to_action.astro
+++ b/src/components/ui/call_to_action.astro
@@ -1,10 +1,13 @@
 ---
+import { Image } from "astro:assets";
+
+import type { ImageMetadata } from "astro";
 import type { BackgroundColor, TextColor } from "@libs/types";
 
 interface Props {
     title: string;
     button: string;
-    image: string;
+    image: ImageMetadata;
     bgColor: BackgroundColor;
     textColor: TextColor;
     href: string;
@@ -16,7 +19,7 @@ const { title, button, image, bgColor, textColor, href } = Astro.props as Props;
     <div class="flex flex-col lg:flex-row place-content-center">
         <div class="relative flex basis-3/8 bg-gray-log -translate-y-8 lg:translate-y-0">
             <div class="absolute border-3 rounded-3xl border-black w-screen-2/3 lg:w-screen-1/3 translate-x-screen-1/6 lg:translate-x-screen-1/24 h-[calc(100%+4rem)] -translate-y-8"></div>
-            <img class="w-full h-full object-cover object-left" src={image} width="" height="" alt="" />
+            <Image class="w-full h-full object-cover object-left" src={image} alt="" />
         </div>
         <div class="flex flex-col items-center p-8 lg:p-20 basis-3/8 bg-black text-white">
             <div class="flex flex-col gap-12 max-w-lg">
@@ -24,7 +27,7 @@ const { title, button, image, bgColor, textColor, href } = Astro.props as Props;
                 <p class="font-medium text-lg md:text-xl">
                     <slot />
                 </p>
-                <a class={`p-4 ${bgColor} rounded-xl text-lg md:text-xl ${textColor} w-fit`} href={href}>{button}</a>
+                <a class:list={["p-4 rounded-xl text-lg md:text-xl w-fit", bgColor, textColor]} href={href}>{button}</a>
             </div>
         </div>
     </div>
