--- a/src/layouts/JoinUsLayout.astro
+++ b/src/layouts/JoinUsLayout.astro
@@ -3,13 +3,14 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import Icon from "@components/ui/icon.astro";
 import SectionTitle from "@components/ui/section_title.astro";
 
-import HommeClavierReference from "@static/Alex_loggez-vous.avif";
+import { Image } from "astro:assets";
+import HommeClavierReference from "@assets/Alex_loggez-vous.webp";
 ---
 
 <BaseLayout title="Rejoignez-nous">
     <section class="relative w-full">
         <div class="absolute h-[32rem] top-[160px] lg:top-auto lg:bottom-0 left-[calc(50vw-170px)] lg:left-[calc(50vw-140px)]">
-            <img class="h-full w-auto" src={HommeClavierReference} width="396" height="672" alt="Homme avec un clavier" />
+            <Image class="h-full w-auto" src={HommeClavierReference} alt="Homme avec un clavier" />
         </div>
         <div class="flex flex-col lg:flex-row min-h-[34rem]">
             <div class="flex w-full justify-center lg:justify-end items-center bg-black text-white">
