--- a/src/layouts/BlogArticleLayout.astro
+++ b/src/layouts/BlogArticleLayout.astro
@@ -2,7 +2,9 @@
 import BaseLayout from "@layouts/BaseLayout.astro";
 import TitleBanner from "@components/ui/title_banner.astro";
 
+import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
+
 const allBlogEntries = (await getCollection("blog")).sort((a, b) => {
     return b.data.date.getTime() - a.data.date.getTime();
 });
@@ -20,7 +22,7 @@ const { id, frontmatter } = Astro.props as Props;
         <div class="flex flex-col lg:flex-row items-center lg:items-start gap-20 max-w-8xl px-1">
             <div class="flex flex-col gap-10 max-w-[calc(100vw-8px)] lg:max-w-4xl">
                 <p class="text-xl">Publié le {new Date(frontmatter.date).toLocaleDateString('fr-FR')} par <span class="font-bold">{frontmatter.author}</span></p>
-                <img class="rounded-2xl self-center w-full h-auto" src={frontmatter.image} alt="" />
+                <Image class="rounded-2xl self-center w-full h-auto" src={frontmatter.image} alt="" />
                 <article class="prose prose-neutral prose-h1:text-5xl prose-lg lg:prose-xl md:text-justify max-w-none">
                     <slot />
                 </article>
@@ -34,7 +36,7 @@ const { id, frontmatter } = Astro.props as Props;
                             <li>
                                 <a href={`/blog/${entry.slug}`}>
                                     <div class="flex flex-col items-center overflow-hidden border-2 border-blue-log rounded-2xl max-w-sm">
-                                        <img src={entry.data.image} alt="" />
+                                        <Image src={entry.data.image} alt="" />
                                         <p class="bg-blue-log text-white font-bold text-xl py-2 w-full">{entry.data.title}</p>
                                     </div>
                                 </a>
