Do not defer main image as it decreasefirst contentful paint

--- a/src/components/homepage/section_wearelog.astro
+++ b/src/components/homepage/section_wearelog.astro
@@ -7,7 +7,7 @@ import PhotoSommaireReference from '@assets/photo-sommaire.webp';
 
 <section class="relative w-full mt-20">
     <div class="flex flex-col lg:flex-row items-center">
-        <Image class="w-full lg:w-[50vw]" src={PhotoSommaireReference} alt="" />
+        <Image class="w-full lg:w-[50vw]" loading="eager" src={PhotoSommaireReference} alt="" />
         <div class="flex flex-col pl-4 lg:px-12 lg:w-[50vw] lg:h-[25vw] py-12 lg:py-0 bg-black text-white justify-center">
             <div class="flex flex-row">
                 <h1 class="inline-flex gap-1 font-bold text-5xl mr-2">
