--- a/src/components/ui/banner.astro
+++ b/src/components/ui/banner.astro
@@ -18,7 +18,7 @@ const { title, subtitle, description, bgColor, textColor, image } = Astro.props 
     <div class="flex flex-col lg:flex-row">
         <div class="relative flex basis-1/2 bg-gray-log">
             <img class:list={["lg:absolute lg:right-0 lg:bottom-0 border w-screen-1/2 lg:w-auto lg:h-[95%] rounded-2xl translate-x-[calc(25vw+2rem)] lg:-translate-x-8 -translate-y-8", bgColor]} width={image.width} height={image.height} alt="" />
-            <Image class="lg:absolute lg:right-0 lg:bottom-0 w-screen-1/2 lg:w-auto h-[95%] rounded-2xl -translate-x-screen-1/4 lg:-translate-x-16 z-10" src={image} alt="" />
+            <Image class="lg:absolute lg:right-0 lg:bottom-0 w-screen-1/2 lg:w-auto h-[95%] rounded-2xl -translate-x-screen-1/4 lg:-translate-x-16 z-10" loading="eager" src={image} alt="" />
         </div>
         <div class="flex bg-black basis-1/2 text-white flex-col justify-center p-10">
             <div class="flex flex-col gap-4 max-w-xl">
